# Framework-Assessment

./: .cspell.config.yaml  .gitignore  .pylintrc  .pymarkdown  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cspell.config.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  enhancement.yml
.github/workflows/: pylint.yml  testing.yml  validation.yml
assessments/FinOps Foundation/: assessment.xlsx  framework.md
assessments/FinOps Foundation 2026/: assessment.xlsx  framework.md
assessments/FinOps++/: assessment.xlsx  framework.md
components/actions/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md  030.md  031.md  032.md  033.md  034.md  035.md  036.md  037.md  038.md  039.md  040.md  (+99 more)
components/capabilities/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md
components/domains/: 001.md  002.md  003.md  004.md
components/profiles/: 001.md  002.md
guidelines/: assessment_design.md  development.md  scopes.md  scoring.md  scoring_guildelines.md  style.md  style_guidelines.md
specifications/: README.md  schemas.md
specifications/actions/: 000.yaml  001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml  016.yaml  017.yaml  018.yaml  019.yaml  020.yaml  021.yaml  022.yaml  023.yaml  024.yaml  025.yaml  026.yaml  027.yaml  028.yaml  029.yaml  030.yaml  031.yaml  032.yaml  033.yaml  034.yaml  035.yaml  036.yaml  037.yaml  038.yaml  039.yaml  (+100 more)
specifications/capabilities/: 000.yaml  001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml  016.yaml  017.yaml  018.yaml  019.yaml  020.yaml  021.yaml  022.yaml  023.yaml  024.yaml  025.yaml  026.yaml  027.yaml  028.yaml  029.yaml
tools/: README.md  __main__.py  defaults.py  models.py
(+39 files in other folders)
