[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finopspp"
version = "0.0.0"
description = "CLI tool used for the FinOps++ Assessment."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Victoria Levy" }]
dependencies = [
    "click == 8.2.1",
    "pandas == 2.3.2",
    "pyyaml == 6.0.2",
    "xlsxwriter == 3.2.5",
    "jinja2 == 3.1.6",
    "semver == 3.0.4",
    "pydantic == 2.12.0"
]

[project.optional-dependencies]
validation = [
    "pylint == 4.0.3",
    "yamllint == 1.37.1"
]
testing = [
    "pytest == 9.0.1"
]

[project.scripts]
finopspp = "finopspp.__main__:cli"

[tool.setuptools]
packages = ["finopspp", "finopspp.specifications"]

[tool.setuptools.package-dir]
"finopspp" = "tools"
"finopspp.composers" = "tools/composers"
"finopspp.models" = "tools/models"
"finopspp.specifications" = "specifications"
"finopspp.templates" = "tools/templates"

[tool.setuptools.package-data]
"finopspp.specifications" = ["*.yaml"]